Diagramme aus Definition 2.6 gezeichnet
git-svn-id: https://svn.lug-jena.de/uni-skripte@3281 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -779,10 +779,19 @@
   $\Phi$, falls es Bijektionen $\nu_{AB}\colon\FD(\Phi A,B)\rightarrow
   \FC(A,\Psi B)$ für $A\in\FC$ und $B\in\FD$ existieren derart, dass für alle
   Morphismen $f\colon A\rightarrow A'$ in $\FC$ und $g\colon B\rightarrow B'$
-  folgende Diagramme kommutieren:\todo{Diagramm zeichnen}
-  $\FD(\Phi A',B)\xrightarrow{\nu_{A'B}} \FC(A',\Psi B)$
-  |Pfeil $\FD(\Phi f,B)$                        |Pfeil $\FC(f,\Psi B)$
-  $\FD(\Phi A,B)\xrightarrow{\nu_{AB}} \FC(A,\Psi B)$
+  folgende Diagramme kommutieren:
+  \begin{gather*}
+    \xymatrix{
+      \FD(\Phi A',B) \ar[r]^{\nu_{A'B}} \ar[d]^{\FD(\Phi f,B)} & \FC(A',\Psi
+       B) \ar[d]^{\FC(f,\Psi B)}\\
+      \FD(\Phi A,B) \ar[r]^{\nu_{AB}} & \FC(A,\Psi B)
+      }\qquad
+          \xymatrix{
+      \FD(\Phi A,B) \ar[r]^{\nu_{AB}} \ar[d]^{\FD(\Phi A,g)} & \FC(A,\Psi
+       B) \ar[d]^{\FC(A,\Psi g)}\\
+      \FD(\Phi A,B') \ar[r]^{\nu_{A'B}} & \FC(A,\Psi B')
+      }
+  \end{gather*}
 \end{defini}
 
 \begin{bemerk}
