\id ist kein Operator. Nun stimmen auch die Abstände.
git-svn-id: https://svn.lug-jena.de/uni-skripte@3290 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -188,12 +188,13 @@
 \newcommand*{\bigtimes}{\mathop{\raisebox{-.5ex}{\hbox{\huge{$\times$}}}}}
 \newcommand*{\kat}[1]{\mathbf{#1}}
 
+\newcommand*{\id}{\mathrm{id}}             % Identität
+
 % Einige Kategorien haben vor der Bezeichnung einen Index.
 \newcommand*{\vorunten}[1]{{}_{#1}\!}
 
-\DeclareMathOperator{\id}{id}             % Identität
 \DeclareMathOperator{\Abb}{Abb}           % Abbildungen
-\DeclareMathOperator{\Id}{Id}             
+\DeclareMathOperator{\Id}{Id}
 \DeclareMathOperator{\GL}{GL}             % allgemeine lineare Gruppe
 \DeclareMathOperator{\rad}{Rad}
 \DeclareMathOperator{\Aut}{Aut}           % Automorphismus
