--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -174,6 +174,9 @@
 % ... und mancheinem gefällt auch das Phi nicht
 \renewcommand*{\phi}{\varphi}
 
+% Ein breiter Hut gefällt mir besse
+\renewcommand*{\hat}{\widehat}
+
 % Frakturbuchstaben
 \newcommand*{\FA}{\mathfrak{A}}
 \newcommand*{\FB}{\mathfrak{B}}
