Aufgaben von Blatt 1 eingebaut
git-svn-id: https://svn.lug-jena.de/uni-skripte@3295 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -107,6 +107,7 @@
 \newtheorem{bemerk}{Bemerkung}[chapter]
 \newtheorem{defini}{Definition}[chapter]
 \newtheorem{bsp}{Beispiel}[chapter]
+\newtheorem{exerc}{Aufgabe}
 
 % Die folgenden Theoremumgebungen bekommen keine Nummer
 \theoremstyle{nonumberbreak}
@@ -125,6 +126,8 @@
 \newcommand*{\bemerkautorefname}{Bemerkung}
 \newcommand*{\definiautorefname}{Definition}
 \newcommand*{\bspautorefname}{Beispiel}
+\newcommand*{\exercautorefname}{Übungsaufgabe}
+
 % Zwischen Unter- und Unterunterabschnitten sollte nicht unterschieden
 % werden.
 \renewcommand*{\subsectionautorefname}{Abschnitt}
@@ -1487,6 +1490,125 @@ Sei $R$ ein Ring.
 
 \clearpage
 \appendix
+
+\chapter{Übungsaufgaben}
+\section{Übungsblatt 1}
+
+% aufg 1
+\begin{exerc}
+  Sei $(G,\cdot)$ eine Gruppe. Zeigen Sie, dass man folgendermaßen eine
+  Kategorie $\FC$ erhält:
+  \begin{enumerate}
+   \item Das einzige Objekt in $\FC$ in $G$.
+   \item Die Morphismen in $\FC$ sind die Elemente von $G$.
+   \item Die Komposition von Morphismen in $\FC$ ist die Multiplikation in
+    $G$.
+  \end{enumerate}
+\end{exerc}
+
+% aufg 2
+\begin{exerc}
+  Sei $(P, \leq)$ eine geordnete Menge. Zeigen Sie, dass man folgendermaßen
+  eine Kategorie $\FC$ erhält:
+  \begin{enumerate}
+   \item Die Objekte von $\FC$ sind die Elemente von $P$.
+   \item Für $x,y\in P$ sei $\FC(x,y)\coloneqq\{(x,y)\}$, falls $x\leq y$ ist,
+    und $\FC(x,y)\coloneqq\emptyset$ sonst.
+   \item Für Morphismen $(x,y)(y,z)$ in $\FC$ sei $(y,z)\circ(x,y)\coloneqq
+    (x,z)$.
+  \end{enumerate}
+\end{exerc}
+
+% aufg 3
+\begin{exerc}
+  Für jede Kategorie $\FC$ definiert man die
+  \highl[Kategorie!entgegengesetzte]{entgegengesetzte Kategorie} $\FC^{\circ}$
+  folgendermaßen:
+  \begin{enumerate}
+   \item Die Objekte von $\FC^{\circ}$ sind genau die Objekte in $\FC$.
+   \item Die Morphismen $A\rightarrow B$ in $\FC^{\circ}$ sind genau die
+    Morphismen $B\rightarrow A$ in $\FC$.
+   \item Für Morphismen $f\colon A\rightarrow B$, $g\colon B\rightarrow C$,
+    d.\,h. Morphismen $f\colon B\rightarrow A$, $g\colon C\rightarrow B$ in
+    $\FC$, ist die Komposition $gf$ in $\FC^{\circ}$ genau der Morphismus
+    $f\circ g\colon C\rightarrow A$ in $\FC$.
+  \end{enumerate}
+  Zeigen Sie, dass $\FC^{\circ}$ tatsächlich eine Kategorie ist.
+\end{exerc}
+
+% aufg 4
+\begin{exerc}
+  Seien $\FC$ und $\FD$ Kategorien. Dann bezeichnet man Funktoren
+  $\FC^{\circ}\rightarrow\FD$ auch als
+  \highl[Funktor!kontravarianter]{kontravariante Funktoren} von $\FC$ nach
+  $\FD$. (Im Unterschied dazu heißen Funktoren $\FC\rightarrow\FD$ genauer
+  \highl[Funktor!kovarianter]{kovariante Funktoren}.) Ein kontravarianter
+  Funktor $\Phi\colon\FC\FD$ ordnet also jedemObjekt $A\in\FC$ ein Objekt
+  $\Phi A\in\FD$ und jedem Morphismus $f\colon A\rightarrow B$ in $\FC$ einen
+  Morphismus $\Phi f\colon\Phi B\rightarrow\Phi A$ zu. Dabei ist $\Phi(g\circ
+  f)=\Phi(f)\circ\Phi(g)$ und $\Phi(\id_{A})=\id_{\Phi(A)}$ für alle
+  $A\xrightarrow{f} B\xrightarrow{g} C$ in $\FC$.
+
+  Zeigen Sie, dass man einen kontravarianten Funktor $\FC(?,
+  X)\colon\FC\rightarrow\kat{Set}$ erhält, wenn man definiert:
+  \begin{enumerate}
+   \item $\FC(?,X)(A)\coloneqq\FC(A,X)$ für $A,X\in\FC$.
+   \item $\FC(?,X(f)\coloneqq\FC(f,X)\colon\FC(B,X)\rightarrow\FC(A,X)$ mit
+    $g\mapsto g\circ f$ für $A,B,C\in\FC$ und $f\in\FC(A,B)$.
+  \end{enumerate}
+\end{exerc}
+
+%aufg 5
+\begin{exerc}
+  Für jeden Körper $K$ und jeden $K$"~Vektorraum $V$ sei
+  $V^{*}\coloneqq\Hom_{K}(V,K)$ der Dualraum von $V$. Für jede lineare
+  Abbildung $f\colon U\rightarrow V$ sei $f^{*}\colon V^{*}\rightarrow U^{*}$
+  mit $g\mapsto g\circ f$ die duale Abbildung zu $f$. Zeigen Sie, dass man
+  durch $V\mapsto V^{*}$ und $f\mapsto f^{*}$ einen kontravarianten Funktor
+  $\Delta\colon\vorunten{K}\kat{Vec}\rightarrow\vorunten{K}\kat{Vec}$ erhält.
+\end{exerc}
+
+%aufg 6
+\begin{exerc}
+  \begin{enumerate}
+   \item Mit $\kat{Ri}$ bezeichnet man die Kategorie aller Ringe und
+    Ringhomomorphismen. Zeigen Sie, dass die Inklusionsabbildung
+    $i\colon\Z\rightarrow\Q$ mono und epi in $\kat{Ri}$ ist.
+   \item Beweisen Sie, dass ein Morphismus in $\kat{Gr}$ genau dann mono ist,
+    wenn er injektiv ist.
+   \item Beweisen Sie, dass ein Morphismus $f\colon G\rightarrow H$ in
+    $\kat{Gr}$ genau dann epi ist, wenn er surjektiv ist. (\textit{Hinweis}:
+    Sei $K\coloneqq f(G)$ und $S\coloneqq\Sym(H/K\cup\{\infty\})$; dabei sei
+    $\infty\notin H/K$. Ferner sei $\sigma\in S$ die Permutation, die $K$ und
+    $\infty$ vertauscht und alle anderen Element fest lässt. Betrachten Sie
+    die Abbildung $t\colon H\rightarrow S$, die jedem $a\in H$ die Permutation
+    $t_{a}$ mit $t_{a}(hK)\coloneqq ahK$ für $h\in H$ und
+    $t_{a}(\infty)\coloneqq\infty$ zuordnet und die Abbildung $t'\colon
+    H\rightarrow S$ mit $a\mapsto\sigma\circ t_{a}\circ\sigma$.)
+  \end{enumerate}
+\end{exerc}
+
+%aufg 7
+\begin{exerc}
+  Seien $f\colon A\rightarrow B$ und $g\colon B\rightarrow C$ Morphismen in
+  einer Kategorie $\FC$. Zeiegen Sie:
+  \begin{enumerate}
+   \item $f,g$ mono (epi) $\Rightarrow g\circ f$ mono (epi).
+   \item $g\circ f$ mono (epi) $\Rightarrow f$ mono ($g$ epi).
+  \end{enumerate}
+\end{exerc}
+
+% aufg 8
+\begin{exerc}
+  Sei $f\colon A\rightarrow B $ ein Morphismus in einer Kategorie $\FC$.
+  Beweisen Sie:
+  \begin{enumerate}
+   \item $f$ Sektion (Retraktion) $\Rightarrow f$ mono (epi).
+   \item $f$ Sektion und Retraktion $\Rightarrow f$ Isomorphismus.
+  \end{enumerate}
+\end{exerc}
+
+
 \begin{thebibliography}{99}
  \bibitem{andfull94} \textsc{Frank W.\,Anderson}, \textsc{Ken R.\,Fuller}:
   Rings and Categories of Modules. Springer 1998. 2.\,Auflage.
