Übungen von Blatt 2 eingebaut
git-svn-id: https://svn.lug-jena.de/uni-skripte@3296 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -1608,6 +1608,45 @@ Sei $R$ ein Ring.
   \end{enumerate}
 \end{exerc}
 
+\section{Übungsblatt 2}
+
+%aufg 9
+\begin{exerc}
+  Sei $\Phi\colon\kat{Gr}\rightarrow\kat{Ab}$ der Funktor, der jeder Gruppe
+  $G$ die Faktorgruppe $G/G'$ zuordnet. Dabei ist $G'\coloneqq\langle
+  xyx^{-1}y-1\colon x,y\in G\rangle$ die Kommutatorgruppe von $G$. Zeigen Sie,
+  dass, $\Phi$ linksadjungiert zum kanonischen Funktor
+  $\Psi\colon\kat{Ab}\rightarrow\kat{Gr}$ ist.
+\end{exerc}
+
+%aufg 10
+\begin{exerc}
+  Gegeben seien Funktoren $\Phi\colon\FC\rightarrow\FD$ und
+  $\Psi\colon\FD\rightarrow\FC$. Ferner sei $\Phi$ linksadjungiert zu $\Psi$
+  bezüglich $\nu= (\nu_{AB})_{A\in\FC, B\in\FD}$. Zeigen Sie:
+  \begin{enumerate}
+   \item Setzt man $\eta_{A}\coloneqq\nu_{A,\Phi A}(\id_{\Phi(A)})\in\FC(A,
+    \Psi\Phi A)$ für $A\in\FC$, so ist
+    $\eta\coloneqq(\eta_{A})_{A\in\FC}\colon \Id_{\FC}\Rightarrow
+    \Psi\circ\Phi$ eine natürliche Transformation; $\eta$ heißt
+    \highl{Einheit} der Adjunktion $(\Phi,\Psi,\nu)$.
+   \item Setzt man $\epsilon_{B}\coloneqq\nu_{\Psi B,B}^{-1}(\id_{\Psi
+    B})\in\FD(\Phi\Psi B,B)$ für $B\in\FD$, so ist $\epsilon\coloneqq
+    (\epsilon_{B})_{B\in\FD}\colon \Phi\circ\Psi\Rightarrow \Id_{\FD}$ eine
+    natürliche Transformation; $\epsilon$ heißt \highl{Koeinheit} von
+    $(\Phi,\Psi,\nu)$.
+   \item Dabei gilt: $(\Psi\circ\epsilon)\circ(\nu\circ\Psi)=\id_{\Psi}$ und
+    $(\epsilon\circ\Phi)\circ(\Phi\circ\eta)=\id_{\Phi}$.
+  \end{enumerate}
+\end{exerc}
+
+%aufg 12
+\begin{exerc}
+  Die Funktoren $\Phi, \Phi'\colon\FC\rightarrow\FD$ seien linksadjungiert zum
+  Funktor $\Psi\colon\FD\rightarrow\FC$. Zeigen Sie, dass $\Phi$ und $\Phi'$
+  natürliche äquivalent sind.
+\end{exerc}
+
 
 \begin{thebibliography}{99}
  \bibitem{andfull94} \textsc{Frank W.\,Anderson}, \textsc{Ken R.\,Fuller}:
