Kleine Fehler behoben und TODO ergänzt
git-svn-id: https://svn.lug-jena.de/uni-skripte@3300 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -322,8 +322,8 @@
    \item Sind Morphismen und Kompositionen klar, so sagt man auch, $\FC$ ist
     eine Kategorie.
    \item Bekanntlich ist die "`Gesamtheit"' aller Mengen keine Menge. Um
-    solche WIdersprüche zu vermeiden, spricht man von "`Klassen"'. Wir werden
-    Klassen nicht genau definieren. Aer z.\,B. ist die Gesamtheit aller Mengen
+    solche Widersprüche zu vermeiden, spricht man von "`Klassen"'. Wir werden
+    Klassen nicht genau definieren. Aber z.\,B. ist die Gesamtheit aller Mengen
     eine Klasse.
    \item Für $A\in\FC$ ist die \highl{Identität}~$\id_{A}$ eindeutig bestimmt.
   \end{enumerate}
@@ -375,7 +375,7 @@
   besteht aus:
   \begin{enumerate}[(1)]
    \item einer "`Abbildung"' $\Phi\colon\FC\rightarrow\FD$ mit $A\mapsto\Phi A$
-   \item einer Abbildung$\FC(A,B)\rightarrow\FD(\Phi A,\Phi B)$ mit
+   \item einer Abbildung $\FC(A,B)\rightarrow\FD(\Phi A,\Phi B)$ mit
     $f\mapsto\Phi f$ zu jedem Paar $(A,B)$ von Objekten in $\FC$.
   \end{enumerate}
   Dabei verlangt man:
@@ -397,7 +397,7 @@
     \highl{Identitätsfunktor}~$\Id_{\FC}\colon\FC\rightarrow\FC$ mit
     $\Id_{\FC}A=A$ und $\Id_{\FC}(f)=f$ für alle $A\xrightarrow{f}B$ in $\FC$.
    \item Für jedes Objekt~$X$ in einer Kategorie~$\FC$ der
-    Funktor~$\FC(X,?)\colon\FC\rightarrow\kat{Set}$ mit
+    Funktor~$\FC(X,?)\colon\FC\rightarrow\kat{Set}$\todo{Dem Satz fehlt ein Verb} mit
     $\FC(X,?)(A)\coloneqq\FC(X,A)$ und $\FC(X,?)(f)\coloneqq\FC(X,f)$, wobei
     $\FC(X,f)\colon\FC(X,A)\rightarrow\FC(X,B)$ mit $g\mapsto f\circ g$ für
     alle $A\xrightarrow{f}B$ gilt.\todo{nachrechnen}
@@ -407,7 +407,7 @@
 \begin{bemerk}
   Ein Funktor~$\FC\xrightarrow{\Phi}\FD$ heißt \highl{treu} oder \highl{voll},
   falls für alle $A,B\in\FC$ die Abbildung $\FC(A,B)\rightarrow\FD(\Phi A,\Phi
-  B)$ mit $f\mapsto\Phi f$ infektiv oder surjektiv ist.
+  B)$ mit $f\mapsto\Phi f$ injektiv oder surjektiv ist.
 \end{bemerk}
 
 %bem 1.4
@@ -428,7 +428,7 @@
 \begin{defini}[Isomorphismus]
   Ein Morphismus $f\colon A\rightarrow B$ in einer Kategorie heißt
   \highl{Isomorphismus} (iso), falls ein $g\in\FC(B,A)$ mit $g\circ f=\id_{A}$
-  und $f\circ g=\id_{B}$ existiert
+  und $f\circ g=\id_{B}$ existiert.
 \end{defini}
 
 \begin{bemerk}
@@ -479,7 +479,7 @@
 \begin{defini}[mono, epi]
   Ein Morphismus $f\colon A\rightarrow B$ in einer Kategorie $\FC$ heißt:
   \begin{enumerate}
-   \item \highl[Morphismus!mono]{mono}\index{mono}, falls alle $g,h\colon
+   \item \highl[Morphismus!mono]{mono}\index{mono}, falls für alle $g,h\colon
     C\rightarrow A$ in $\FC$ mit $f\circ g=g\circ h$ gilt, $g=h$.
    \item \highl[Morphismus!epi]{epi}\index{epi}, falls für alle $g,h\colon
     B\rightarrow C$ in $\FC$ mit $g\circ f=h\circ f$ gilt, $g=h$.
@@ -536,25 +536,25 @@
    \item $g\circ f$ mono (epi) $\Rightarrow f$ mono ($g$ epi).
   \end{enumerate}
   \begin{proof}
-    Der Beweis erfolgt in der Übung.
+    Der Beweis erfolgt in der Übung (siehe \autoref{exe:7}).
   \end{proof}
 \end{satz}
 
 %def 1.9
-\begin{defini}[Sektion, Refraktion]
+\begin{defini}[Sektion, Retraktion]
   Ein Morphismus $f\colon A\rightarrow B$ in einer Kategorie heißt
-  \highl{Sektion} oder \highl{Refraktion}, falls ein $g\in\FC(A,B)$ mit
+  \highl{Sektion} oder \highl{Retraktion}, falls ein $g\in\FC(A,B)$ mit
   $g\circ f=\id_{A}$ oder $f\circ g=\id_{B}$ existiert.
 \end{defini}
 
 \begin{satz}
   Sei $\FC$ eine Kategorie und $f\colon A\rightarrow B$ in $\FC$. Dann gilt:
   \begin{enumerate}
-   \item $f$ Sektion (Refraktion) $\Rightarrow$ $f$ mono (epi).
-   \item $f$ Sektion und Refraktion $\Rightarrow f$ Isomorphismus.
+   \item $f$ Sektion (Retraktion) $\Rightarrow$ $f$ mono (epi).
+   \item $f$ Sektion und Retraktion $\Rightarrow f$ Isomorphismus.
   \end{enumerate}
   \begin{proof}
-    Der Beweis erfolgt in der Übung.
+    Der Beweis erfolgt in der Übung (siehe \autoref{exe:8})
   \end{proof}
 \end{satz}
 
@@ -588,7 +588,7 @@
   Seien $\Phi, \Psi\colon\FC\rightarrow\FD$ Funktoren. Eine
   \highl[Transformation!natürliche]{natürliche Transformation} von $\Phi$ nach
   $\Psi$ ist eine "`Familie"' $\tau=(\tau_{A})_{A\in\FC}$ von Elementen
-  $\tau_{A}\in\FD(\Phi A, \Psi A)$ mit $(\Psi_{f})\circ\tau_{A}=
+  $\tau_{A}\in\FD(\Phi A, \Psi A)$ mit $(\Psi f)\circ\tau_{A}=
   \tau_{B}\circ(\Phi f)$ für $A,B\in\FC$ und $f\in\FC(A,B)$. Wir schreiben,
   $\tau\colon\Phi\Rightarrow\Psi$.
   \begin{gather*}
@@ -1589,9 +1589,9 @@ Sei $R$ ein Ring.
 \end{exerc}
 
 %aufg 7
-\begin{exerc}
+\begin{exerc}\label{exe:7}
   Seien $f\colon A\rightarrow B$ und $g\colon B\rightarrow C$ Morphismen in
-  einer Kategorie $\FC$. Zeiegen Sie:
+  einer Kategorie $\FC$. Zeigen Sie:
   \begin{enumerate}
    \item $f,g$ mono (epi) $\Rightarrow g\circ f$ mono (epi).
    \item $g\circ f$ mono (epi) $\Rightarrow f$ mono ($g$ epi).
@@ -1599,7 +1599,7 @@ Sei $R$ ein Ring.
 \end{exerc}
 
 % aufg 8
-\begin{exerc}
+\begin{exerc}\label{exe:8}
   Sei $f\colon A\rightarrow B $ ein Morphismus in einer Kategorie $\FC$.
   Beweisen Sie:
   \begin{enumerate}
