Verbesserungen am Skript
· Es gab einen Befehl \textset, mit dem ich anfangs die Kategorie Set
  setzen wollte. Später definierte ich den Befehhl \kat, der generischer
  ist. Das Überbleibsel habe ich entfernt und durch \kat ersetzt.
· \Id ist kein Operator.
· Klargestellt, dass die Elemente von Klassen immer Mengen sind.
· Ein paar Bespiele zu vollen Teilkategorien fehlten.
· Sätze umformuliert und sonstige kleine Fehler behoben.

git-svn-id: https://svn.lug-jena.de/uni-skripte@3303 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -193,18 +193,16 @@
 \newcommand*{\CL}{\mathcal{L}}
 \newcommand*{\CP}{\mathcal{P}}
 
-% Menge Set
-\newcommand*{\textset}{\underline{\text{Set}}}
 \newcommand*{\bigtimes}{\mathop{\raisebox{-.5ex}{\hbox{\huge{$\times$}}}}}
 \newcommand*{\kat}[1]{\mathbf{#1}}
 
 \newcommand*{\id}{\mathrm{id}}             % Identität
+\newcommand*{\Id}{\mathrm{Id}}             % Identitätsfunktor
 
 % Einige Kategorien haben vor der Bezeichnung einen Index.
 \newcommand*{\vorunten}[1]{{}_{#1}\!}
 
 \DeclareMathOperator{\Abb}{Abb}           % Abbildungen
-\DeclareMathOperator{\Id}{Id}
 \DeclareMathOperator{\GL}{GL}             % allgemeine lineare Gruppe
 \DeclareMathOperator{\rad}{Rad}
 \DeclareMathOperator{\Aut}{Aut}           % Automorphismus
@@ -290,9 +288,6 @@
 % \theoremlisttype{all}
 \listtheorems{defini,festl}
 
-\todo[inline]{Vorlesungen vom 4. und 8. April 2011}
-
-
 \chapter{Kategorien und Funktoren}
 %def 1.1
 \begin{defini}[Kategorie]
@@ -301,7 +296,8 @@
    \item einer \highl{Klasse}~$\CC$ und die Elemente einer Klasse heißen
     \highl{Objekt}e,
    \item einer Menge $\CC(A,B)$ und die Elemente der Menge heißen
-    \highl[Morphismus]{Morphismen} von $A$ nach $B$. Wir schreiben
+    \highl[Morphismus]{Morphismen} von $A$ nach $B$.\footnote{Nach
+    \cite{adhest} sind Objekte immer Mengen.} Wir schreiben
     $A\xrightarrow{f} B$ oder $f\colon A\rightarrow B$ zu jedem Paar~$(A,B)$
     von Objekten in $\CC$,
    \item einer Abbildung $\CC(B,C)\times\CC(A,B)\rightarrow\CC(A,C)$ mit
@@ -361,12 +357,15 @@
     $\kat{Set}$.
    \item Die endlichen Gruppen bilden eine volle Teilkategorie~$\kat{gr}$ von
     $\kat{Gr}$.
+   \item Die endlich"=dimensionalen $K$"~Vektorräume bilden eine volle
+    Teilkategorie~$\vorunten{K}\kat{vec}$ von $\vorunten{K}\kat{Vec}$.
    \item Die abelschen Gruppen bilden eine volle
     Teilkategorie~$\kat{Ab}$ von  $\kat{Gr}$.
    \item Die endlichen abelschen Gruppen bilden eine volle
     Teilkategorie~$\kat{ab}$ von  $\kat{Ab}$.
    \item Mengen und injektive Abbildungen bilden eine nicht volle
     Teilkategorie von $\kat{Set}$.
+   \item $\kat{Gr}$ ist \emph{keine} Teilkategorie von $\kat{Set}$.
   \end{enumerate}
 \end{bsp}
 
@@ -392,13 +391,13 @@
   \begin{enumerate}[(a)]
    \item Der \highl{Vergissfunktor} $\kat{Gr}\rightarrow\kat{Set}$, der jeder
     Gruppe die zugrundeliegende Menge zuordnet. Analog hat man
-    Vergissfunktoren $\vorunten{K}\kat{Set}\rightarrow\kat{Set}$,
+    Vergissfunktoren $\vorunten{K}\kat{Vec}\rightarrow\kat{Set}$,
     $\vorunten{K}\kat{Vec}\rightarrow\kat{Ab}$ usw.
    \item Für jede Kategorie~$\CC$ hat man den
     \highl{Identitätsfunktor}~$\Id_{\CC}\colon\CC\rightarrow\CC$ mit
     $\Id_{\CC}A=A$ und $\Id_{\CC}(f)=f$ für alle $A\xrightarrow{f}B$ in $\CC$.
-   \item Für jedes Objekt~$X$ in einer Kategorie~$\CC$ der
-    Funktor~$\CC(X,?)\colon\CC\rightarrow\kat{Set}$\todo{Dem Satz fehlt ein Verb} mit
+   \item Für jedes Objekt~$X$ in einer Kategorie~$\CC$ existiert der
+    Funktor~$\CC(X,?)\colon\CC\rightarrow\kat{Set}$ mit
     $\CC(X,?)(A)\coloneqq\CC(X,A)$ und $\CC(X,?)(f)\coloneqq\CC(X,f)$, wobei
     $\CC(X,f)\colon\CC(X,A)\rightarrow\CC(X,B)$ mit $g\mapsto f\circ g$ für
     alle $A\xrightarrow{f}B$ gilt.\todo{nachrechnen}
@@ -446,7 +445,7 @@
     so ist $g\circ f\colon A\rightarrow C$ ein Isomorphismus in $\CC$ und
     $(g\circ f)^{-1}=f^{-1}\circ g^{-1}$.
    \item Die Isomorphismen in $\kat{Set}$ sind genau die Bijektionen und die
-    Isomorphismen in $\kat{Gr}$ sind genau die Gruppenhomomorphismen.
+    Isomorphismen in $\kat{Gr}$ sind genau die Gruppenisomorphismen.
   \end{enumerate}
 \end{bsp}
 
@@ -481,15 +480,18 @@
   Ein Morphismus $f\colon A\rightarrow B$ in einer Kategorie $\CC$ heißt:
   \begin{enumerate}
    \item \highl[Morphismus!mono]{mono}\index{mono}, falls für alle $g,h\colon
-    C\rightarrow A$ in $\CC$ mit $f\circ g=g\circ h$ gilt, $g=h$.
+    C\rightarrow A$ in $\CC$ mit $f\circ g=f\circ h$ gilt, $g=h$.
    \item \highl[Morphismus!epi]{epi}\index{epi}, falls für alle $g,h\colon
     B\rightarrow C$ in $\CC$ mit $g\circ f=h\circ f$ gilt, $g=h$.
   \end{enumerate}
 \end{defini}
 
 \begin{satz}
-  Für alle Mengen und Abbildungen $f\colon A\rightarrow B$ gilt, $f$ mono
-  (epi) in $\kat{Set}\Leftrightarrow f$ injektiv (surjektiv).
+  Für alle Mengen und Abbildungen $f\colon A\rightarrow B$ gilt:
+  \begin{enumerate}
+   \item $f$ mono in $\kat{Set}\Leftrightarrow f$ injektiv.
+   \item $f$ epi in $\kat{Set}\Leftrightarrow f$ surjektiv.
+  \end{enumerate}
   \begin{proof}
     \begin{enumerate}
      \item
@@ -544,7 +546,7 @@
 %def 1.9
 \begin{defini}[Sektion, Retraktion]
   Ein Morphismus $f\colon A\rightarrow B$ in einer Kategorie heißt
-  \highl{Sektion} oder \highl{Retraktion}, falls ein $g\in\CC(A,B)$ mit
+  \highl{Sektion} oder \highl{Retraktion}, falls ein $g\in\CC(B,A)$ mit
   $g\circ f=\id_{A}$ oder $f\circ g=\id_{B}$ existiert.
 \end{defini}
 
@@ -889,13 +891,13 @@
 \end{bemerk}
 
 \begin{bsp}
-  Seien $\CC\coloneqq \CD\coloneqq\textset$ und $S\in\textset$. Sei
+  Seien $\CC\coloneqq \CD\coloneqq\kat{Set}$ und $S\in\kat{Set}$. Sei
   $\Phi\colon\CC\rightarrow\CD$ der Funktor mit $\Phi A\coloneqq A\times S$
-  für $A\in\textset$ und $\Phi f\coloneqq f\times\id_{S}$ für jeden Morphismus
-  $f$ in $\textset$. Außerdem sei
+  für $A\in\kat{Set}$ und $\Phi f\coloneqq f\times\id_{S}$ für jeden Morphismus
+  $f$ in $\kat{Set}$. Außerdem sei
   $\Psi\coloneqq\Abb(S,?)\colon\CD\rightarrow\CC$ wie in \autoref{bsp:1.3}. Es
   ist zu zeigen, dass $\Phi$ linksadjungiert zu
-  $\Psi$ ist. Dann brauhen wir für $A,B\in\textset$ eine Bijektion
+  $\Psi$ ist. Dann brauhen wir für $A,B\in\kat{Set}$ eine Bijektion
   $\nu_{AB}\colon\Abb(A\times S,B)\rightarrow \Abb(A,\Abb(S,B))$ mit
   $f\mapsto\nu_{AB}(f)$.
 
@@ -909,9 +911,9 @@
 \begin{defini}[Ring]
   Ein \highl{Ring} $R$ ist ein Tripel $R=(R,+,\cdot)$ mit
   \begin{enumerate}
-   \item $(R,+)$ ist eine abelsche Gruppe. mit dem neutralen Element~$0$, das
+   \item $(R,+)$ ist eine abelsche Gruppe. mit dem neutralen Element~$0$, dem
     \highl{Nullelement}.
-   \item $(R,\cdot)$ ist ein \highl{Monoid}, d.\,h. assoziativ mit $1$, das
+   \item $(R,\cdot)$ ist ein \highl{Monoid}, d.\,h. assoziativ mit $1$, dem
     \highl{Einselement}.
    \item Die Distributivgesetze gelten: $a(b+c)=ab+ac$ und $(a+b)c=ac+bc$ für
     alle $a,b,c\in R$.
@@ -931,7 +933,7 @@
 
 \begin{bsp}
   \begin{enumerate}
-   \item $\Z,\Q, \R, \C, \{0\}$ (Letzteres wird als \highl{Nullring}
+   \item $\Z,\Q, \R, \C, \{0\}$ (Letzterer wird als \highl{Nullring}
     bezeichnet).
    \item Sei $M$ eine Menge. Dann ergibt sich der \highl{Potenzmengenring}
     $\CP(M)=\Set{A | A\subseteq M}$ durch $A+B\coloneqq(A\setminus
@@ -944,21 +946,20 @@
     \highl{Matrixring} des Grades~$n$ über $R$. Das Nullelement ist die
     \highl{Nullmatrix} $0_{n}$ und das Einselement $1_{n}$.
    \item Sei $(R_{i})_{i\in I}$ eine nichtleere Familie von Ringen. Dann
-    erhält mn das \highl[Produkt!direktes]{direkte Produkt} $\bigtimes_{i\in
+    erhält man das \highl[Produkt!direktes]{direkte Produkt} $\bigtimes_{i\in
     I} R_{i}\coloneqq\prod_{i\in I} R_{i}\coloneqq\Set{(r_{i})_{i\in I} |
     r_{i}\in R_{i}, i\in I}$ mit $(r_{i})_{i\in I}+(s_{i})_{i\in I}\coloneqq
-    (r_{i}+s_{i})_{i\in I}$. Speziell: $R_{i}=R$ für alle $i$ ergibt
+    (r_{i}+s_{i})_{i\in I}$. Der Spezialfall $R_{i}=R$ für alle $i$ ergibt
     $\bigtimes_{i\in I} R_{i}= \Abb(I,R)= \Set{f\colon I\rightarrow R | f
-    \text{ Abbildung}}$ mit $(f+g)(x)\coloneqq f(x)+g(x)$ für $x\in I$.
-
-    Speziell: $I=\{1,\dotsc,n\}\colon\bigtimes_{i\in I} R_{i}=
+    \text{ Abbildung}}$ mit $(f+g)(x)\coloneqq f(x)+g(x)$ für $x\in I$ und für
+    den Spezialfall $I=\{1,\dotsc,n\}$ ergibt sich das direkte Produkt durch $\bigtimes_{i\in I} R_{i}=
     R_{1}\times\dotso \times R_{n}= \Set{(r_{1},\dotsc, r_{n} | r_{1}\in
-    R_{1},\dotsc, r_{n}\in R_{n}})$.)
+    R_{1},\dotsc, r_{n}\in R_{n}})$.
    \item Sei $R$ ein Ring und $M$ ein Monoid. Dann ergibt sich der
     \highl{Monoidring} von $M$ über $R$ durch $RM\coloneqq\Set{(r_{m})_{m\in
     M} | r_{m}\in R, m\in M, r_{m}=0 \text{ für fast alle } m\in M}$. Die
     Addition ergibt sich durch $(r_{m})_{m\in M}+ (s_{m})_{m\in
-    M}\coloneqq(r_{m} +s_{m})$ und die Multiplikation durch $(r_{m})_{m\in
+    M}\coloneqq(r_{m} +s_{m})_{m\in M}$ und die Multiplikation durch $(r_{m})_{m\in
     M}\cdot (s_{m})_{m\in M}\coloneqq(\sum_{p,q\in M, pq=m} r_{p}s_{q})_{m\in
     M}$. Die Summe ist \emph{endlich}.
 
@@ -987,7 +988,7 @@
 %3.2 def
 \begin{defini}[Invertierbar, Invers, Einheit]
   Sei $R$ ein Ring und $a\in R$. Das Element $a$ heißt genau dann
-  \highl{rechtsinvertierbar}, wenn ein $b\in R$ existiert mit $ab=1$. Das $b$b
+  \highl{rechtsinvertierbar}, wenn ein $b\in R$ existiert mit $ab=1$. Das $b$
   heißt dann \highl{rechtsinvers} zu $a$. Analog definiert man
   \highl{linksinvertierbar} und \highl{linksinvers}. Das Element $a$ heißt
   genau dann \highl{invertierbar} oder \highl{Einheit}, wenn es rechts- und
@@ -995,7 +996,7 @@
 \end{defini}
 
 \begin{bemerk}
-  $U(R)\coloneqq R^{\times}\times\Set{a\in R | a \text{ invertierbar}}$ ist
+  $U(R)\coloneqq R^{\times}=\Set{a\in R | a \text{ invertierbar}}$ ist
   eine Gruppe bezüglich der Multiplikation. Sie heißt die
   \highl{Einheitengruppe}. Für $U(R)=R\setminus\{0\}$ heißt $R$
   \highl{Schiefkörper}. Wenn $R$ ein kommutativer Schiefkörper, so ist $R$ ein
@@ -1145,8 +1146,9 @@
     insbesondere $R$ auch ein einfacher Ring. Die Umkehrung gilt nicht.
    \item Sei $(I_{j})_{j\in J}$ eine nichtleere Familie von Idealen
     $I_{S}\trianglelefteq R$. Dann ist $\bigcap_{j\in J} I_{j}\trianglelefteq
-    R$. Insbesondere: $A\subseteq R\Rightarrow(A)= \bigcap_{I\trianglelefteq
-    R, A\subseteq R} I\trianglelefteq R$ (das von $A$ erzeugte Ideal). Es
+    R$. Insbesondere erhält man für $A\subseteq R$ das von $A$
+    \highl[Ideal!erzeugtes]{erzeugte Ideal} $(A)= \bigcap_{I\trianglelefteq
+    R, A\subseteq R} I\trianglelefteq R$. Es
     gilt, $(A)= \Set{\sum_{i=1}^{k} r_{i}a_{i}s_{i} | a_{i}\in A, r_{i}\in R,
     s_{i}\in R, k\in\N_{0}}$. Wir schreiben, $(a_{1},\dotsc, a_{n})=
     (\{a_{1},\dotsc, a_{n}\})$ für $a_{1},\dotsc, a_{n}\in R$.
@@ -1218,7 +1220,7 @@
     existiert wegen der Maximalität ein $x\in I'\cap X$. Wegen $J'\coloneqq
     J+P \supsetneq P$ existiert analog ein $y\in J'\cap X$. Dann $xy\in
     I'J'\cap X$, also $xy\notin P$ wegen $P\cap X=\emptyset$. Also
-    $P\supsetneq I'J' =(I+P)(J+P)= IJ+IP+PJ+p^{2}\subseteq IJ+P$, d.\,h.
+    $P\supsetneq I'J' =(I+P)(J+P)= IJ+IP+PJ+P^{2}\subseteq IJ+P$, d.\,h.
     $IJ\nsubseteq P$. Damit ist die erste Aussage bewiesen. Für die zweite
     Aussage setzt man $X\coloneqq\{1\}$ und die dritte Aussage ist klar.
   \end{proof}
