--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -463,7 +463,7 @@
 %def 1.6
 \begin{defini}[Isomorphe Objekte]
   Objekte $A$ und $B$ in einer Kategorie $\CC$ heißen
-  \highl[Objekte!isomorphe]{isomorph}\index{isomorph}, falls ein Isomorphismus
+  \highl[Objekt!isomorphe]{isomorph}\index{isomorph}, falls ein Isomorphismus
   $f\in\CC(A,B)$ existiert. Wir schreiben, $A\cong_{\CC}B$.
 \end{defini}
 
@@ -841,7 +841,7 @@
 %def 2.5
 \begin{defini}[Äquivalente Kategorien]
   Zwei Kategorien $\CC, \CD$ heißen
-  \highl[Kategorien!äquivalente]{äquivalent}, falls Funktoren
+  \highl[Kategorie!äquivalente]{äquivalent}, falls Funktoren
   $\CC\rightleftarrows_{\Psi}^{\Phi}\CD$ existieren mit $\Psi\circ\Phi\sim
   \Id_{\CC}$ und $\Phi\circ\Psi\sim\Id_{\CD}$.
 
@@ -965,7 +965,7 @@
     M}$. Die Summe ist \emph{endlich}.
 
     Für $m\in M$ sei $\hat{m}\coloneqq(\delta_{mn})_{m\in M}$
-    (\highl{\textsc{Kronecker}"~Delta}). Dann ist $\hat{1_{M}}$ das
+    (\highl[Kronecker-Delta]{\textsc{Kronecker}"~Delta}). Dann ist $\hat{1_{M}}$ das
     Einselement von $RM$ und man hat $\hat{m}\cdot\hat{n}=\hat{mn}$ für
     $m,n\in M$.
 
@@ -1500,8 +1500,8 @@ Sei $R$ ein Ring.
    \item Sei $M$ ein $R$"~Linksmodul. Dann ist $M$ ein $R^{o}$"~Rechtsmodul
     mit $mr\coloneqq rm$ mit $r\in R$ und $m\in M$. Die Eigenschaften von
     $R$"~Linksmoduln übertragen sich auf $R^{o}$"~Rechtsmoduln. Falls $R$
-    kommutativ ist, ist $R=R^{0}$\todo{ist das ein $o$ oder eine $0$}. Also
-    sind das $R$"~Linksmodul gleich dem $R$"~Rechtsmodul.
+    kommutativ ist, ist $R=R^{o}$. Also sind das $R$"~Linksmodul gleich dem
+    $R$"~Rechtsmodul.
    \item Sei $\phi\colon R\rightarrow S$ unitärer Ringhomomorphismus und $M$ ein
     $S$"~Linksmodul. Dann wird $M$ zu einem $R$"~Linksmodul mit
     $rm\coloneqq\phi(r)m$ für $r\in R$ und $m\in M$. Spezialfall: $R\subseteq
@@ -1525,7 +1525,7 @@ Sei $R$ ein Ring.
 
 \begin{bemerk}
   \begin{enumerate}
-   \item   Abkürzung: Ab sofort entspricht Modul gleich dem Linksmodul. Rechtsmoduln
+   \item   Abkürzung: Ab sofort entspricht \highl{Modul} gleich dem Linksmodul. Rechtsmoduln
   werden explizit erwähnt.
    \item In jedem $R$"~Modul~$M$ gilt, $r0=0$ für $r\in R$, $0m=0$ für
     $m\in M$, $(-1)m=-m$ für $m\in M$. Aber $rm=0\nRightarrow r=0\vee m=0$.
@@ -1534,7 +1534,7 @@ Sei $R$ ein Ring.
 
 %def 5.2
 \begin{defini}[Untermodul]
-  Ein \highl{Untermoduln} eines $R$"~Moduls~$M$ ist eine Teilmenge~$N\subseteq
+  Ein \highl{Untermodul} eines $R$"~Moduls~$M$ ist eine Teilmenge~$N\subseteq
   M$, die mit den entsprechend eingeschränkten Verknüpfungen ein $R$"~Modul
   ist, d.\,h. $0\in N$ und für $r,s\in R, m,n\in N\Rightarrow rm+sn\in N$.
 \end{defini}
