Kleine Fehler beseitigt
git-svn-id: https://svn.lug-jena.de/uni-skripte@3309 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -1008,7 +1008,7 @@
 
 \begin{bsp}
   Sei $R$ ein Ring und $n\in\N$. Dann ist $\GL(n,R)\coloneqq U(R^{n\times n})$
-  der Ring der invertierbaren Matizen und heißt \highl[Gruppe!allgemeine
+  der Ring der invertierbaren Matrizen und heißt \highl[Gruppe!allgemeine
   lineare]{allgemeine lineare Gruppe} des Grades~$n$ über $R$ (general linear
   group).
 \end{bsp}
@@ -1074,7 +1074,7 @@
 %def 3.5
 \begin{defini}[Teilring]
   Sei $R$ ein Ring. Dann ist $S\subseteq R$ genau dann ein \highl{Teilring},
-  wenn $S$ ein Ring mit den entsprechend eingescränkten Verknüpfungen ist.
+  wenn $S$ ein Ring mit den entsprechend eingeschränkten Verknüpfungen ist.
 \end{defini}
 
 \begin{bemerk}
@@ -1110,7 +1110,8 @@
     \end{pmatrix}$.
    \item Der Ring $\R\times\{0\}\subseteq\R\times\R$ ist \emph{kein} unitärer
     Teilring.
-   \item Der Ring der \highl{Quaternionenschiefkörper} $\HH\coloneqq\Set{
+   \item Der Ring der \highl{Quaternionenschiefkörper}\help{Ist das nicht
+    einfach der Ring der Quaternionen?} $\HH\coloneqq\Set{
     \begin{pmatrix}
       a& b\\
       -\overline{b}& \overline{a}
@@ -1361,7 +1362,7 @@
 \begin{bemerk}
   \begin{enumerate}
    \item Wir lassen zu, dass $\phi(1_{R})\neq1_{S}$. Im Fall
-    $\phi(1_{R})=1_{s}$ heißt das $\phi$ \highl{unitär}. Stets ist
+    $\phi(1_{R})=1_{S}$ heißt das $\phi$ \highl{unitär}. Stets ist
     $\phi(0)=0$. Ist $\phi$ unitär, so ist $\phi(x)\in U(S)$ und
     $\phi(x)^{-1}= \phi(x^{-1})$ für $x\in U(R)$.
    \item Sind $\phi\colon R\rightarrow S$ und $\psi\colon S\rightarrow T$
