--- a/richter-geozerl/skript.ltx
+++ b/richter-geozerl/skript.ltx
@@ -202,7 +202,7 @@
 \begin{document}
 
 \title{Geometrische Zerlegungen}
-\author{Christian Richter}
+\author{PD Dr.\,Christian Richter}
 \date{Semester: SS 2011}
 \maketitle
 
